# haemodialysis-analyze

./: .gitignore  TODO  pyproject.toml
analyze/: analyze.py  patient.py  utils.py
analyze/tests/: __init__.py  ranges.xlsx
