[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analyze"
version = "1.0.0"
authors = [
  { name="Federico Tarascio", email="fe.tarascio@gmail.com" },
]
description = "Analyzes haemodialysis data."
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pandas >= 2.0.3',
]
